[package]
name = "mctl"
description = "Control the framework LED Matrix"
authors = ["Mathijs Saey"]
version = "0.1.0"
edition = "2021"

[dependencies]
led_matrix_serial_api = { path = "../led_matrix_serial_api" }
clap = { version = "4.5.7", features = ["derive"] }
log = { version = "0.4.21", features = ["release_max_level_info"]}
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "color"] }
libc = "0.2"
